# projects

./: readme.md
cybertruck_blender/: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  run.sh
cybertruck_blender/res/model/: truck.blend
cybertruck_blender/src/: main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  window.cpp  window.h
filecypher/: cypher.c  readme.md
flac_to_mp3/: convert.py
reuters-21578_indexer/: 24hchallenge.txt  challenge.txt  challengeruns.txt  compression.txt  demo.py  files.py  indices.py  requirements.txt  runs.txt  samples.txt  stopwords.txt
stock_ml/: RY.csv  requirements.txt
stockscraper/: StockLog.java  Stocks.java  WebServerConnection.java  readme.md  run.bat
warzone/: CMakeLists.txt  CMakePresets.json  README.md  commands.txt  gamelog.txt
warzone/res/map/: Cobra.map  Colorado.map  Flower Z.map  King of the Hills.map  files.txt  lp.map
warzone/src/: Cards.cpp  Cards.fwd.h  Cards.h  CardsDriver.cpp  CardsDriver.h  CommandProcessing.cpp  CommandProcessing.fwd.h  CommandProcessing.h  CommandProcessingDriver.cpp  CommandProcessingDriver.h  GameEngine.cpp  GameEngine.h  GameEngineDriver.cpp  GameEngineDriver.h  LoggingObserver.cpp  LoggingObserver.h  LoggingObserverDriver.cpp  LoggingObserverDriver.h  MainDriver.cpp  Map.cpp  Map.h  MapDriver.cpp  MapDriver.h  Orders.cpp  Orders.h  OrdersDriver.cpp  OrdersDriver.h  Player.cpp  Player.fwd.h  Player.h  PlayerDriver.cpp  PlayerDriver.h  PlayerStrategies.cpp  PlayerStrategies.h  PlayerStrategiesDriver.cpp  PlayerStrategiesDriver.h
(+19 files in other folders)
